View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026967 | Community | OCCT:Modeling Algorithms | public | 2015-12-08 14:42 | 2016-04-20 15:50 |
Reporter | Istvan Csanady | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026967: BRepFill_OffsetWire should not copy plane if Alt == 0.0 | ||||
Description | BRepFill_OffsetWire should not copy plane if Alt == 0.0, because currently if I make an offset wire with BRepOffsetAPI_MakeOffset, BRep_Tools::CurveOnSurface(edge, faceThatContainedTheOriginalWire) will perform projection instead of returning the resulting offset curves, because the underlying PCurve representations will not be accessible since the copied surface inside BRepFill_OffsetWire is hidden from the user. That is surprising and undesired behavior in my opinion. The fix is trivial, see the attached patch. | ||||
Steps To Reproduce | Not needed | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
patch.diff (894 bytes) |
|
Branch CR26967 has been created by msv. SHA-1: c2f41f961bdfe97f9c360984beb252c20054ca35 Detailed log of new commits: Author: msv Date: Tue Dec 8 16:01:26 2015 +0300 0026967: BRepFill_OffsetWire should not copy plane if Alt == 0.0 |
|
I have changed the patch a little and created the branch CR26967. |
|
Dear Igor, please review it. |
|
Seems to be OK |
|
Branch CR26967 has been updated forcibly by mkv. SHA-1: 01e8fb84a6908dafdafcef3f8a48fa24ad72e9e3 |
|
Dear BugMaster, Branch CR26967 was rebased on current master of occt git-repository. SHA-1: 01e8fb84a6908dafdafcef3f8a48fa24ad72e9e3 |
|
Dear BugMaster, Branch CR26967 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 01e8fb84a6908dafdafcef3f8a48fa24ad72e9e3 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 134 (134 on master) products component : Linux: 37 (37 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: http://occt-tests/CR26967-master-occt-64/Debian70-64/summary.html http://occt-tests/CR26967-master-occt-64/Windows-64-VC10/summary.html Failed: bugs modalg_2 bug424_1, bug424_2 feat featdprism A1, B4, C3, E1 Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 93410815 / 94036565 [-0.67%] Total CPU difference: 19610.799999999886 / 19277.53999999991 [+1.73%] products component : Total MEMORY difference: 26181702 / 26088083 [+0.36%] Total CPU difference: 7393.740000000009 / 7351.649999999994 [+0.57%] Testing on Windows: occt component : Total MEMORY difference: 56327014 / 56344722 [-0.03%] Total CPU difference: 17953.016282699096 / 17819.651027798893 [+0.75%] products component : Total MEMORY difference: 16516499 / 16529851 [-0.08%] Total CPU difference: 5607.611945999988 / 5737.9039811999755 [-2.27%] There are no differences in images found by testdiff. |
|
Dear msv, Branch CR26967 has been rejected due to: - regressions/differences/improvements |
|
Branch CR26967 has been updated by msv. SHA-1: 34ad3e947fc22b44b55b64b47aee7cc132c8d79c Detailed log of new commits: Author: msv Date: Mon Dec 14 16:16:46 2015 +0300 Correct misprint |
|
Branch CR26967_1 has been created by msv. SHA-1: cb37917f61e855972713f66047787202ea62e692 Detailed log of new commits: Author: msv Date: Tue Dec 8 16:01:26 2015 +0300 0026967: BRepFill_OffsetWire should not copy plane if Alt == 0.0 In the class BRepFill_OffsetWire the base plane is not copied anymore if altitude parameter is equal to zero. |
|
Misprint has been corrected. |
|
Please test the branch CR26967_1. |
|
Dear BugMaster, Branch CR26967_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: cb37917f61e855972713f66047787202ea62e692 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 134 (134 on master) products component : Linux: 37 (37 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 93136558 / 94053417 [-0.97%] Total CPU difference: 19763.039999999837 / 19278.489999999907 [+2.51%] products component : Total MEMORY difference: 26204992 / 26097898 [+0.41%] Total CPU difference: 7281.219999999995 / 7353.209999999995 [-0.98%] Testing on Windows: occt component : Total MEMORY difference: 56328952 / 56348011 [-0.03%] Total CPU difference: 17840.69556269892 / 17820.446632898893 [+0.11%] products component : Total MEMORY difference: 16517167 / 16529851 [-0.08%] Total CPU difference: 5624.740855799976 / 5737.9039811999755 [-1.97%] There are no differences in images found by testdiff. |
|
Dear BugMaster, Branch CR26967_1 is TESTED. |
|
Branch CR26967 has been deleted by kgv. SHA-1: 34ad3e947fc22b44b55b64b47aee7cc132c8d79c |
|
Branch CR26967_1 has been deleted by kgv. SHA-1: cb37917f61e855972713f66047787202ea62e692 |
occt: master a2ff7810 2015-12-08 13:01:26 Committer: bugmaster Details Diff |
0026967: BRepFill_OffsetWire should not copy plane if Alt == 0.0 In the class BRepFill_OffsetWire the base plane is not copied anymore if altitude parameter is equal to zero. |
Affected Issues 0026967 |
|
mod - src/BRepFill/BRepFill_OffsetWire.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-12-08 14:42 | Istvan Csanady | New Issue | |
2015-12-08 14:42 | Istvan Csanady | Assigned To | => msv |
2015-12-08 14:42 | Istvan Csanady | File Added: patch.diff | |
2015-12-08 16:01 | git | Note Added: 0048862 | |
2015-12-08 16:02 | msv | Note Added: 0048863 | |
2015-12-08 16:02 | msv | Status | new => resolved |
2015-12-08 16:03 | msv | Note Added: 0048864 | |
2015-12-08 16:03 | msv | Assigned To | msv => ifv |
2015-12-10 13:58 | ifv | Note Added: 0048942 | |
2015-12-10 13:58 | ifv | Assigned To | ifv => bugmaster |
2015-12-10 13:58 | ifv | Status | resolved => reviewed |
2015-12-11 10:51 |
|
Assigned To | bugmaster => mkv |
2015-12-11 12:31 | git | Note Added: 0049019 | |
2015-12-14 15:44 |
|
Note Added: 0049084 | |
2015-12-14 15:44 |
|
Note Added: 0049085 | |
2015-12-14 15:45 |
|
Note Added: 0049086 | |
2015-12-14 15:45 |
|
Assigned To | mkv => msv |
2015-12-14 15:45 |
|
Status | reviewed => assigned |
2015-12-14 15:45 |
|
Test case number | => Not needed |
2015-12-14 16:16 | git | Note Added: 0049099 | |
2015-12-14 16:19 | git | Note Added: 0049101 | |
2015-12-14 16:20 | msv | Note Added: 0049102 | |
2015-12-14 16:20 | msv | Status | assigned => resolved |
2015-12-14 16:20 | msv | Steps to Reproduce Updated | |
2015-12-14 16:21 | msv | Note Added: 0049103 | |
2015-12-14 16:21 | msv | Assigned To | msv => bugmaster |
2015-12-14 16:21 | msv | Status | resolved => reviewed |
2015-12-14 17:37 |
|
Assigned To | bugmaster => mkv |
2015-12-15 15:11 |
|
Note Added: 0049154 | |
2015-12-15 15:11 |
|
Note Added: 0049155 | |
2015-12-15 15:11 |
|
Assigned To | mkv => bugmaster |
2015-12-15 15:11 |
|
Status | reviewed => tested |
2015-12-18 15:25 | bugmaster | Changeset attached | => occt master a2ff7810 |
2015-12-18 15:25 | bugmaster | Status | tested => verified |
2015-12-18 15:25 | bugmaster | Resolution | open => fixed |
2016-04-17 13:54 | git | Note Added: 0052996 | |
2016-04-17 13:54 | git | Note Added: 0052997 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:50 |
|
Status | verified => closed |