0026967: BRepFill_OffsetWire should not copy plane if Alt == 0.0

In the class BRepFill_OffsetWire the base plane is not copied anymore if altitude parameter is equal to zero.